Corrected Naming Convention

--- a/src/main/resources/employee.properties
+++ b/src/main/resources/employee.properties
@@ -1,22 +1,7 @@
 #Employee Data
-#Thu Sep 04 08:00:51 IST 2025
-employee.1.email=khandelwal@gmail.com
-employee.1.id=EMP2876
-employee.1.joiningDate=2025-09-12
-employee.1.name=neha
-employee.1.type=EXECUTIVE
-employee.2.email=neha@intimetec@.com
-employee.2.id=EMP6580
-employee.2.joiningDate=2024-09-12
-employee.2.name=Neha Arora
-employee.2.type=EXECUTIVE
-employee.3.email=nk@gmail.com
-employee.3.id=EMP40
-employee.3.joiningDate=2023-09-12
-employee.3.name=Neha
-employee.3.type=MANAGER
-employee.4.email=jyoti@gmail.com
-employee.4.id=EMP1502
-employee.4.joiningDate=1990-09-08
-employee.4.name=Jyoti
-employee.4.type=EXECUTIVE
+#Mon Sep 08 23:31:26 IST 2025
+EMPLOYEE.1.EMAIL=ok@gmail.com
+EMPLOYEE.1.ID=EMP6662
+EMPLOYEE.1.NAME=ok
+EMPLOYEE.1.TYPE=EXECUTIVE
+EMPLOYEE.1.joiningdate=2121-09-09
