EmployeeDAO.java file added in doa package and LeaveManagementSystem.java updated

--- a/src/main/resources/employee.properties
+++ b/src/main/resources/employee.properties
@@ -1,7 +1,12 @@
 #Employee Data
-#Mon Sep 08 23:31:26 IST 2025
+#Wed Sep 10 14:00:59 IST 2025
 EMPLOYEE.1.EMAIL=ok@gmail.com
 EMPLOYEE.1.ID=EMP6662
 EMPLOYEE.1.NAME=ok
 EMPLOYEE.1.TYPE=EXECUTIVE
 EMPLOYEE.1.joiningdate=2121-09-09
+EMPLOYEE.2.EMAIL=jankesh@gmail.com
+EMPLOYEE.2.ID=EMP9746
+EMPLOYEE.2.NAME=jankesh
+EMPLOYEE.2.TYPE=MANAGER
+EMPLOYEE.2.joiningdate=2000-01-01
