--- a/src/main/resources/employee.properties
+++ b/src/main/resources/employee.properties
@@ -1,5 +1,5 @@
 #Employee Data
-#Wed Sep 10 14:00:59 IST 2025
+#Wed Sep 10 15:26:21 IST 2025
 EMPLOYEE.1.EMAIL=ok@gmail.com
 EMPLOYEE.1.ID=EMP6662
 EMPLOYEE.1.NAME=ok
@@ -10,3 +10,8 @@ EMPLOYEE.2.ID=EMP9746
 EMPLOYEE.2.NAME=jankesh
 EMPLOYEE.2.TYPE=MANAGER
 EMPLOYEE.2.joiningdate=2000-01-01
+EMPLOYEE.3.EMAIL=hiteshkumar@gmail.com
+EMPLOYEE.3.ID=EMP1168
+EMPLOYEE.3.NAME=Hitesh Kumar
+EMPLOYEE.3.TYPE=LEAD
+EMPLOYEE.3.joiningdate=2021-09-01
