employee.properties file updated

--- a/src/main/resources/employee.properties
+++ b/src/main/resources/employee.properties
@@ -1,5 +1,5 @@
 #Employee Data
-#Wed Sep 10 15:26:21 IST 2025
+#Wed Sep 10 17:32:52 IST 2025
 EMPLOYEE.1.EMAIL=ok@gmail.com
 EMPLOYEE.1.ID=EMP6662
 EMPLOYEE.1.NAME=ok
@@ -15,3 +15,8 @@ EMPLOYEE.3.ID=EMP1168
 EMPLOYEE.3.NAME=Hitesh Kumar
 EMPLOYEE.3.TYPE=LEAD
 EMPLOYEE.3.joiningdate=2021-09-01
+EMPLOYEE.4.EMAIL=mukul@gmail.com
+EMPLOYEE.4.ID=EMP2866
+EMPLOYEE.4.NAME=Mukul Sharma
+EMPLOYEE.4.TYPE=LEAD
+EMPLOYEE.4.joiningdate=2020-09-01
